--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Shop">
         <activity
+            android:name=".activity.GoodsDetailActivity2"
+            android:exported="false" />
+        <activity
             android:name=".activity.SortDetailActivity"
             android:exported="false" />
         <activity
